# Gosh-Fetch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  electron-builder.yml  index.html  next.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  update.md  vite.config.ts
.github/flatpak/: com.gosh.fetch.desktop  com.gosh.fetch.yml
.github/snap/: gosh-fetch.desktop  snapcraft.yaml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release.yml
dist-electron/src-electron/: main.js  main.js.map  preload.js  preload.js.map  sidecar.js  sidecar.js.map  tray-popup-preload.js  tray-popup-preload.js.map
docs/: API.md  ARCHITECTURE.md
gosh-dl/: BUILDING.md  Cargo.toml  README.md  technical_spec.md
gosh-dl/src/: config.rs  engine.rs  error.rs  lib.rs  types.rs
gosh-dl/src/http/: connection.rs  mod.rs  segment.rs
gosh-dl/src/storage/: mod.rs  sqlite.rs
gosh-dl/src/torrent/: bencode.rs  dht.rs  magnet.rs  metainfo.rs  mod.rs  peer.rs  pex.rs  piece.rs  tracker.rs
src/: App.css  App.svelte  App.tsx  app.css  main.tsx
src-electron/: main.ts  preload.ts  sidecar.ts  tray-popup.html
src-rust/: Cargo.toml
src-rust/migrations/: 001_initial.sql
src-rust/src/: constants.rs  engine_adapter.rs  error.rs  lib.rs  main.rs  rpc_server.rs  state.rs  types.rs
src-rust/src/commands/: database.rs  download.rs  settings.rs  system.rs  torrent.rs
src-rust/src/db/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: aria2c-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: gosh-fetch.desktop
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: api.rs  constants.rs  engine_adapter.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  tray.rs  types.rs  validation.rs
src-tauri/src/aria2/: client.rs  mod.rs  process.rs  supervisor.rs  tracker.rs  types.rs
src-tauri/src/commands/: download.rs  mod.rs  recursive.rs  settings.rs  system.rs  torrent.rs
src-tauri/src/db/: mod.rs
src-tauri/src/tray/: mod.rs
src/components/: Onboarding.css  Onboarding.tsx
src/components/downloads/: AddDownloadModal.css  AddDownloadModal.tsx  CompactDownloadRow.tsx  DownloadCard.css  DownloadCard.tsx  SortableDownloadCard.tsx
src/components/layout/: Sidebar.css  Sidebar.tsx
src/lib/: api.ts
src/lib/api/: commands.ts  events.ts  system.ts
src/lib/components/: Onboarding.css  Onboarding.svelte
src/lib/components/downloads/: AddDownloadModal.css  AddDownloadModal.svelte  CompactDownloadRow.svelte  DownloadCard.svelte  DownloadRow.css  DownloadRow.svelte  (+4 more)
src/lib/pages/: About.svelte  Completed.svelte  Downloads.svelte  Settings.svelte
src/lib/stores/: downloads.svelte.ts  mirror.svelte.ts  notifications.svelte.ts  stats.svelte.ts  theme.svelte.ts  ui.svelte.ts  updater.svelte.ts
src/lib/types/: download.ts  electron.d.ts  mirror.ts  settings.ts
src/lib/utils/: format.ts  torrentTree.ts
src/pages/: About.css  About.tsx  Completed.tsx  Downloads.css  Downloads.tsx  History.css  History.tsx  Scheduler.css  Scheduler.tsx  Settings.css  Settings.tsx  Statistics.tsx
src/routes/: About.svelte  Downloads.css  Downloads.svelte  History.css  History.svelte  Mirror.css  Mirror.svelte  Scheduler.css  Scheduler.svelte  Settings.css  Settings.svelte  Statistics.css  Statistics.svelte  TrayPopup.svelte
src/store/: downloadSlice.ts  store.ts  themeSlice.ts
(+27 files in other folders)
